# fastAPI_

./: .env_example  README.md  main,.py  main.py  pyproject.toml  utils.py
services/: posts_service.py
static/css/: style.css
templates/: index.html  layout.html
view_models/home/: index_view_model.py
view_models/shared/: view_model.py
views/: about.py  account.py  home.py  login.py  logout.py
